--- a/FK_DB_Test1.qmd
+++ b/FK_DB_Test1.qmd
@@ -11,50 +11,140 @@ knitr::opts_chunk$set(echo = FALSE)
 # install.packages("rerddap")
 # install.packages("plotdap")
 # install.packages("mapdata")
+# install.packages("leaflet")
+# install.packages("stringr")
+# install.packages("dplyr")
 # put your libary loading here:
 library("rerddap")
 library("mapdata")
 library("plotdap")
-
+library("leaflet")
+library("stringr")
+library("dplyr")
+library("leafem")
 ```
 
-```{r check rerrdap is installed by printing version}
-# rerddap::version()
-# rerddap::servers()  # list of "default" servers
-# to select a single ERDDAP server to use:
-database <- "http://131.247.136.200:8080/erddap/"
-# database <- "https://upwell.pfeg.noaa.gov/erddap/"
-Sys.setenv(RERDDAP_DEFAULT_URL = database)
-# this is required when using servers not listed by rerddap::servers()
+
+
+
+
+
+
+```{r}
+get_dates <- function(info){
+  info$alldata$time %>%
+    filter(attribute_name=="actual_range") %>%
+    pull(value) %>%
+    str_split(", ", simplify = T) %>%
+    as.numeric() %>%
+    as.POSIXct(origin = "1970-01-01", tz = "GMT")
+}
+
+#sst4   <- info('moda_sst4_7d_fk'         , url = "http://131.247.136.200:8080/erddap/")
+#chl   <- info('moda_oc_7d_fk'         , url = "http://131.247.136.200:8080/erddap/")
+
+# box_2 <- get_box(site$lon, site$lat, cells_wide=10)
+# r_2   <- get_raster(chl, lon=box$lon, lat=box$lat, date="last", field="chl")
+# d_2 <- get_dates(chl)[2]
+# map_raster(r, site_lon=site$lon, site_lat=site$lat, site_label=site$name, title="CHL")
+# bounding box offset around site marker for extent of map
+# b_2 <- 3.0
+leaflet(options = leafletOptions(crs = leafletCRS(crsClass = "L.CRS.EPSG4326"))) %>%
+  # basemap from GBIF in 4326
+  addTiles("//tile.gbif.org/4326/omt/{z}/{x}/{y}@1x.png?style=gbif-geyser") %>%
+  # Call to IMaRS ERDDAP (chlor_a)
+  addWMSTiles(
+    baseUrl = 'http://131.247.136.200:8080/erddap/wms/moda_oc_7d_fk/request?',
+    layers = "moda_oc_7d_fk:chlor_a_median",
+    options = WMSTileOptions(
+      version = "1.3.0", format = "image/png", transparent = T, opacity = 0.7,)) %>%
+ #    time = format(d_2,"%Y-%m-%dT00:00:00Z")))  %>% Use this to pull dates from somewhere else
+time = "2018-08-01T00:00:00Z" %>%
+# addMarkers(lng = ~lon, lat = ~lat, label = ~name, data=site) %>%
+# addMouseCoordinates(map, style = c("detailed", "basic"), epsg = NULL,
+#  proj4string = NULL, native.crs = FALSE) %>%
+#   fitBounds(site$lon - b_2, site$lat - b_2, site$lon + b_2, site$lat + b_2) %>% iterative bounds here
+fitBounds(-85.0, 23.0, -78.5, 27.4) %>%
+addLegend(
+    position="bottomright",
+    title = paste0("CHL (mg m^-3)<br>", format(time,"%Y-%m-%d")),
+    colorNumeric("Spectral", c(0,4), reverse=T), seq(4,0))
 ```
 
-```{r rerddap griddap usage}
-# LAT <- c(23.0, 27.0)
-# LON <- c(-84.0, -80.0)
-TIME <- c("2017-01-01", "2017-01-02")
-DATASET_ID <- "moda_oc_7d_fk"
-# These are MODA 7D mean files for the FK dashboard
-dataset_result <- rerddap::griddap(
-    DATASET_ID,
-    # latitude = LAT, 
-    # longitude = LON, 
-    time = TIME, 
-    fields = 'chlor_a_anom',
-    fmt = "nc"  # (optional) tells to download as .csv instead of .nc
-)
 
-# w <- map("worldHires", xlim = c(-85.0, -78.5), ylim = c(23.0, 27.0), 
-#         fill = TRUE, plot = FALSE)
-# map using that outline,  temperature color from cmocean
-# add_griddap(plotdap(mapData = w), dataset_result, ~chlor_a_anom, fill = "algae",maxpixels = 50000 )
-
-plotdap(mapTitle = "Chlorophyll-a Anomaly") %>%
-    add_griddap(
-      dataset_result, 
-      ~chlor_a_anom, 
-      fill = "algae",  
-      maxpixels = 1000000
-      ) %>%
-print(landmask = TRUE)
-
+```{r}
+# box_2 <- get_box(site$lon, site$lat, cells_wide=10)
+# r_2   <- get_raster(chl, lon=box$lon, lat=box$lat, date="last", field="chl")
+# map_raster(r, site_lon=site$lon, site_lat=site$lat, site_label=site$name, title="CHL")
+# bounding box offset around site marker for extent of map
+b_2 <- 3.0
+leaflet(
+  options = leafletOptions(
+    crs = leafletCRS(crsClass = "L.CRS.EPSG4326"))) %>%
+  # basemap from GBIF in 4326
+  addTiles("//tile.gbif.org/4326/omt/{z}/{x}/{y}@1x.png?style=gbif-geyser") %>%
+  # sst
+  addWMSTiles(
+    baseUrl = 'http://131.247.136.200:8080/erddap/wms/moda_oc_7d_fk/request?',
+    layers = 'moda_oc_7d_fk:chlor_a_median',
+    options = WMSTileOptions(
+      version = "1.3.0", format = "image/png", transparent = T, opacity = 0.7,
+      time = '2018-08-01T00:00:00Z'))  %>%
+  addMarkers(lng = ~lon, lat = ~lat, label = ~name, data=site) %>%
+  addMouseCoordinates() %>%
+  fitBounds(site$lon - b_2, site$lat - b_2, site$lon + b_2, site$lat + b_2) %>%
+  addLegend(
+    position="bottomright",
+    title = paste0("CHL (mg m^-3)<br>", format(d_2,"%Y-%m-%d")),
+    colorNumeric("Spectral", c(0,4), reverse=T), seq(0,4))
 ```
+
+
+
+
+
+
+
+
+
+
+# ```{r check rerrdap is installed by printing version}
+# # rerddap::version()
+# # rerddap::servers()  # list of "default" servers
+# # to select a single ERDDAP server to use:
+# database <- "http://131.247.136.200:8080/erddap/"
+# # database <- "https://upwell.pfeg.noaa.gov/erddap/"
+# Sys.setenv(RERDDAP_DEFAULT_URL = database)
+# # this is required when using servers not listed by rerddap::servers()
+# ```
+
+# ```{r rerddap griddap usage}
+# # LAT <- c(23.0, 27.0)
+# # LON <- c(-84.0, -80.0)
+# TIME <- c("2017-01-01", "2017-01-02")
+# DATASET_ID <- "moda_oc_7d_fk"
+# # These are MODA 7D mean files for the FK dashboard
+# dataset_result <- rerddap::griddap(
+#     DATASET_ID,
+#     # latitude = LAT, 
+#     # longitude = LON, 
+#     time = TIME, 
+#     fields = 'chlor_a_anom',
+#     fmt = "nc"  # (optional) tells to download as .csv instead of .nc
+# )
+# 
+# # w <- map("worldHires", xlim = c(-85.0, -78.5), ylim = c(23.0, 27.0), 
+# #         fill = TRUE, plot = FALSE)
+# # map using that outline,  temperature color from cmocean
+# # add_griddap(plotdap(mapData = w), dataset_result, ~chlor_a_anom, fill = "algae",maxpixels = 50000 )
+# 
+# plotdap(mapTitle = "Chlorophyll-a Anomaly") %>%
+#     add_griddap(
+#       dataset_result, 
+#       ~chlor_a_anom, 
+#       fill = "algae",  
+#       maxpixels = 1000000
+#       ) %>%
+# print(landmask = TRUE)
+# 
+# ```
