--- a/FK_DB_Test1.qmd
+++ b/FK_DB_Test1.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Florida Keys Data Dash"
 author: "USF IMaRS"
-date: "3/2/2023"
+date: "2/3/2023"
 format: html
 ---
 
@@ -14,6 +14,7 @@ knitr::opts_chunk$set(echo = FALSE)
 # install.packages("leaflet")
 # install.packages("stringr")
 # install.packages("dplyr")
+# install.packages("readr")
 # put your libary loading here:
 library("rerddap")
 library("mapdata")
@@ -22,8 +23,15 @@ library("leaflet")
 library("stringr")
 library("dplyr")
 library("leafem")
+library("readr")
 ```
-r
+
+```{r}
+roi <- "FK"
+site <- read_csv("ROI_INFO.csv", col_types=cols()) %>%
+  filter(id == roi)
+```
+
 
 ```{r}
 get_dates <- function(info){
@@ -35,8 +43,8 @@ get_dates <- function(info){
     as.POSIXct(origin = "1970-01-01", tz = "GMT")
 }
 
-#sst4   <- info('moda_sst4_7d_fk'         , url = "http://131.247.136.200:8080/erddap/")
-#chl   <- info('moda_oc_7d_fk'         , url = "http://131.247.136.200:8080/erddap/")
+sst4   <- info('moda_sst4_7d_fk'         , url = "http://131.247.136.200:8080/erddap/")
+chl   <- info('moda_oc_7d_fk'         , url = "http://131.247.136.200:8080/erddap/")
 
 # box_2 <- get_box(site$lon, site$lat, cells_wide=10)
 # r_2   <- get_raster(chl, lon=box$lon, lat=box$lat, date="last", field="chl")
@@ -93,6 +101,4 @@ leaflet(
     colorNumeric("Spectral", c(0,4), reverse=T), seq(0,4))
 ```
 
-# `{r check rerrdap is installed by printing version} # # rerddap::version() # # rerddap::servers()  # list of "default" servers # # to select a single ERDDAP server to use: # database <- "http://131.247.136.200:8080/erddap/" # # database <- "https://upwell.pfeg.noaa.gov/erddap/" # Sys.setenv(RERDDAP_DEFAULT_URL = database) # # this is required when using servers not listed by rerddap::servers() #`
 
-# `{r rerddap griddap usage} # # LAT <- c(23.0, 27.0) # # LON <- c(-84.0, -80.0) # TIME <- c("2017-01-01", "2017-01-02") # DATASET_ID <- "moda_oc_7d_fk" # # These are MODA 7D mean files for the FK dashboard # dataset_result <- rerddap::griddap( #     DATASET_ID, #     # latitude = LAT,  #     # longitude = LON,  #     time = TIME,  #     fields = 'chlor_a_anom', #     fmt = "nc"  # (optional) tells to download as .csv instead of .nc # ) #  # # w <- map("worldHires", xlim = c(-85.0, -78.5), ylim = c(23.0, 27.0),  # #         fill = TRUE, plot = FALSE) # # map using that outline,  temperature color from cmocean # # add_griddap(plotdap(mapData = w), dataset_result, ~chlor_a_anom, fill = "algae",maxpixels = 50000 ) #  # plotdap(mapTitle = "Chlorophyll-a Anomaly") %>% #     add_griddap( #       dataset_result,  #       ~chlor_a_anom,  #       fill = "algae",   #       maxpixels = 1000000 #       ) %>% # print(landmask = TRUE) #  #`
