--- a/FK_DB_Test1.qmd
+++ b/FK_DB_Test1.qmd
@@ -29,12 +29,12 @@ library("here")
 ```
 
 ```{r}
-source(here::here("scripts/functions.R"), local = FALSE) # Wut?
-if (!exists("params")) 
-  params <- list(
-  roi_id   = "FK")
-site <- read_csv(here("data/sites.csv"), col_types=cols()) %>%
-  filter(id == params$roi_id)
+# source(here::here("scripts/functions.R")) # Wut?
+# roi   = "FKNMS"
+# Set Bounds
+# site <- read_csv("data/ROI_INFO.csv", col_types=cols())   # Pull ROI bounds from file. Define manually for now.
+slat <- 24; nlat <- 26; wlon <- -83.5; elon <- -78.5
+
 sst4   <- info('moda_sst4_7d_fk'         , url = "http://131.247.136.200:8080/erddap/")
 chl   <- info('moda_oc_7d_fk'         , url = "http://131.247.136.200:8080/erddap/")
 # scape <- info("noaa_aoml_4729_9ee6_ab54", url = "https://cwcgom.aoml.noaa.gov/erddap/")
