--- a/FK_DB_Test1.qmd
+++ b/FK_DB_Test1.qmd
@@ -29,12 +29,12 @@ library("here")
 ```
 
 ```{r}
-# source(here::here("scripts/functions.R")) # Wut?
+# source(here::here("scripts/functions.R")) 
 # roi   = "FKNMS"
 # Set Bounds
 # site <- read_csv("data/ROI_INFO.csv", col_types=cols())   # Pull ROI bounds from file. Define manually for now.
-slat <- 24.5; nlat <- 25; wlon <- -83.5; elon <- -78.5
-time_tmp <- "2018-08-01"
+slat <- 24.0; nlat <- 26; wlon <- -83.0; elon <- -80.0
+date_tmp <- "2017-01-01"
 
 sst4   <- info('moda_sst4_7d_fk'         , url = "http://131.247.136.200:8080/erddap/")
 chl   <- info('moda_oc_7d_fk'         , url = "http://131.247.136.200:8080/erddap/")
@@ -58,15 +58,14 @@ leaflet(options = leafletOptions(crs = leafletCRS(crsClass = "L.CRS.EPSG4326")))
     layers = "moda_oc_7d_fk:chlor_a_median",
     options = WMSTileOptions(
       version = "1.3.0", format = "image/png", transparent = T, opacity = 0.7,
-      time = "2018-08-01T00:00:00Z")) %>% 
+      time = "2023-01-07T00:00:00Z")) %>% 
   # addMarkers(lng = ~lon, lat = ~lat, label = ~name, data=site) %>%
-  # addMouseCoordinates() %>%
- fitBounds(wlon, slat, elon, nlat) 
- # fitBounds(-83.5, 24.0, -78.5, 26.0)
-    # addLegend(
-    # position="bottomright",
-    # title = paste0("SST (°C)<br>", format(d,"%Y-%m-%d")),
-    # colorNumeric("Spectral", c(0,32), reverse=T), seq(0,32))
+  addMouseCoordinates() %>%
+fitBounds(wlon, slat, elon, nlat) %>%
+ addLegend(
+    position="bottomright",
+    title = paste0("CHLa (mg m^-3)<br>", date_tmp),
+    colorNumeric("Spectral", c(0,30), reverse=T), seq(0,30))
 
 
 
